--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,10 @@
 .dlt{
 }
 
-.newNote{
+.search{
+   background-color: rgb(143, 143, 143);
+    padding: 10px;
+    border-radius: 3px;
+    margin-bottom: 20px;
     
 }
