--- a/src/App.scss
+++ b/src/App.scss
@@ -1,77 +1,3 @@
-*{
-    
-    background: #fafafa;
-    font-family: 'Roboto', sans-serif;
-    background-color: transparent;
-
-    
-}
 body{
-    width: 25rem;
-    height: 53rem
-}   
-.app{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    box-sizing: border-box;
-    
-}
-.phone{
-    background-color: #6c6c6c;
-    border-radius: 1rem;
-    width: 25rem;
-    height: 53rem;
-}
-.notes{
-    
-    .note{
-    background: rgb(255, 251, 173);
-    border-radius: 0.6rem;
-    margin-bottom: 0.6rem;
-    display: flex;
-    max-width: 13.8rem;
-    min-height: 3rem;
-    flex-direction:    column;
-    footer{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        p{
-            margin: 0;
-            font-size: 0.8rem;
-            color: #6c6c6c;
-
-        }
-
-        h1{
-            font-size: 1.5em;
-            font-weight: bold;
-            margin: 0;
-        }
-        h3{
-            font-size: 1em;
-            font-weight: bold;
-            margin: 0;
-        }
-        .delete{
-            font-size: 1.5em;
-            color: #6c6c6c;
-            cursor: pointer;
-        }
-    }
-}
-}
-
-.dlt{
-}
-
-.search{
-   background-color: rgb(143, 143, 143);
-    padding: 10px;
-    border-radius: 3px;
-    margin-bottom: 20px;
-    
+    margin:0
 }
